# advent-of-code

./: README.md
2023/rust/: newday.sh  rmtarget.sh
2023/rust/day01/: input.txt
2023/rust/day01/src/: lib.rs
2023/rust/day02/src/: lib.rs
2023/rust/day03/src/: lib.rs
2023/rust/day04/src/: lib.rs
2023/rust/day05/src/: lib.rs
2023/rust/day06/: Cargo.toml
2023/rust/day08/: Cargo.toml
2023/rust/day09/: rustfmt.toml
2023/rust/day19/: Cargo.toml
2023/rust/day21/: Cargo.toml
2023/rust/day22/: Cargo.toml
2023/rust/day24/: Cargo.toml
2023/rust/day25/: Cargo.toml
rust/2023/day01/src/: lib.rs
