[package]
name = "day21"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "part-1"
path = "src/bin/part-1.rs"

[[bin]]
name = "part-2"
path = "src/bin/part-2.rs"

[dependencies]
thiserror = "1.0.50"
nom = "7.1.3"
rayon = "1.8.0"
num = "0.4.1"
strum = "0.25"
strum_macros = "0.25"
itertools = "0.12"
cached = "0.46"
array2d = "0.3.1"
pathfinding = "4.6.0"
polygonical = "0.5.0"
rstest = "0.18"
polyfit-rs = "0.2.1"
